Minor fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,12 @@
   list-style: none;
 }
 
+html,
 body {
   font-family: "Raleway", sans-serif !important;
-  max-width: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -121,238 +124,6 @@ header {
   background-color: rgba(59, 62, 64, 0.5);
   transition: all 0.5s ease-in-out;
 }
-
-/*start radial-menu-left*/
-.navRad {
-  z-index: 20;
-  width: 45px;
-  height: 45px;
-  display: block;
-  position: fixed;
-  line-height: 45px;
-  border-radius: 50%;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
-}
-
-.navRad.right-bottom {
-  right: 15px;
-  bottom: 15px;
-}
-
-.navRad.left-bottom {
-  left: 15px;
-  bottom: 15px;
-}
-
-.navRad.middle-bottom {
-  left: 50vw;
-  bottom: 15px;
-}
-
-.mask {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 21;
-  color: #fff;
-  width: inherit;
-  height: inherit;
-  cursor: pointer;
-  font-size: 28px;
-  text-align: center;
-  border-radius: 50%;
-  position: absolute;
-  background: #fff;
-  transition: all 0.1s ease-in-out 0s;
-}
-
-.navRad.active .mask {
-  background: #fdd8e4;
-  transition: opacity 2s ease-in-out;
-  /* opacity: 0; */
-  pointer-events: none; /* Optionally disable pointer events during transition */
-  transform: rotate(-135deg);
-}
-
-.navRad:after {
-  top: 0;
-  left: 0;
-  content: "";
-  width: inherit;
-  height: inherit;
-  border-radius: 50%;
-  position: absolute;
-  background: #de6382;
-  transform: rotate(-90deg);
-  transition: all 0.1s ease-in-out 0s;
-}
-
-.navRad.right-bottom.active:after {
-  top: -125px; /* Move the top edge above the menu */
-  left: -125px; /* Move the left edge to the left of the menu */
-  width: 350px; /* Increase the width to 350px */
-  height: 350px; /* Increase the height to 350px */
-  transform: rotate(-90deg); /* Rotate the menu 90 degrees */
-}
-
-.navRad.left-bottom.active:after {
-  top: -125px; /* Move the top edge above the menu */
-  left: -190px; /* Move the left edge to the left of the menu */
-  width: 350px; /* Increase the width to 350px */
-  height: 350px; /* Increase the height to 350px */
-  transform: rotate(-90deg); /* Rotate the menu 90 degrees */
-}
-
-.navRad.middle-bottom.active:after {
-  top: -125px; /* Move the top edge above the menu */
-  left: -190px; /* Move the left edge to the left of the menu */
-  width: 350px; /* Increase the width to 350px */
-  height: 350px; /* Increase the height to 350px */
-  transform: rotate(-90deg); /* Rotate the menu 90 degrees */
-}
-
-.navRad-item {
-  top: 0;
-  left: 0;
-  z-index: 19;
-  width: 4.5rem;
-  height: 4.5rem;
-  color: #fff;
-  background-color: #de6382;
-  font-size: 24px;
-  transform: none;
-  line-height: 45px;
-  border-radius: 50%;
-  position: absolute;
-  text-align: center;
-  transition: all 0.3s cubic-bezier(0.68, 1.55, 0.265, 1);
-}
-
-.navRad.left-bottom.active .navRad-count-1 {
-  transform: translate(-10px, -100px);
-}
-
-.navRad.left-bottom.active .navRad-count-2 {
-  transform: translate(35px, -80px);
-}
-
-.navRad.left-bottom.active .navRad-count-3 {
-  transform: translate(80px, -45px);
-}
-
-.navRad.left-bottom.active .navRad-count-4 {
-  transform: translate(100px, 15px);
-}
-
-.navRad.middle-bottom.active .navRad-count-1 {
-  transform: translate(-10px, -100px);
-}
-
-.navRad.middle-bottom.active .navRad-count-2 {
-  transform: translate(35px, -80px);
-}
-
-.navRad.middle-bottom.active .navRad-count-3 {
-  transform: translate(80px, -45px);
-}
-
-.navRad.middle-bottom.active .navRad-count-4 {
-  transform: translate(100px, 0);
-}
-
-.navRad.right-bottom.active .navRad-count-1 {
-  transform: translate(-10px, -115px);
-}
-
-.navRad.right-bottom.active .navRad-count-2 {
-  transform: translate(-78px, -78px);
-}
-
-.navRad.right-bottom.active .navRad-count-3 {
-  transform: translate(-115px, -10px);
-}
-
-.flag-sm {
-  width: 4rem;
-  object-fit: contain;
-  border-radius: 50%;
-}
-
-.palette-sm {
-  width: 4rem;
-}
-
-.theme-pie-chart {
-  position: relative;
-  width: 120px;
-  height: 120px;
-  margin: 30px auto;
-}
-
-.navRad.active .theme-pie-chart-container.active {
-  border: 3px solid black;
-  box-sizing: content-box;
-}
-
-.navRad .theme-pie-chart-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--ct2-mint-cream);
-}
-
-.navRad.active .theme-pie-chart,
-.navRad.active .navRad-item {
-  width: 6rem;
-  height: 6rem;
-}
-
-.navRad .theme-pie-chart {
-  width: 3rem;
-  height: 3rem;
-  margin: 0 auto;
-}
-
-.theme-pie-circle {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  position: absolute;
-  clip-path: polygon(50% 50%, 100% 100%, 0% 210%);
-  transform-origin: center;
-}
-
-.slice1 {
-  background-color: var(--bg-clr1);
-  transform: rotate(0deg);
-}
-
-.slice2 {
-  background-color: var(--bg-clr2);
-  transform: rotate(60deg);
-}
-
-.slice3 {
-  background-color: var(--bg-clr3);
-  transform: rotate(120deg);
-}
-
-.slice4 {
-  background-color: var(--bg-clr4);
-  transform: rotate(180deg);
-}
-
-.slice5 {
-  background-color: var(--bg-clr5);
-  transform: rotate(240deg);
-}
-
-.slice6 {
-  background-color: var(--bg-clr6);
-  transform: rotate(300deg);
-}
-
-/*end radial-menu-left*/
 
 header .logo {
   margin-left: 3rem;
@@ -524,6 +295,8 @@ footer {
   min-height: 100vh;
   justify-content: center;
   align-items: center;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 /*--Main Section1 Specific (Start)*/
