--- a/css/utility.css
+++ b/css/utility.css
@@ -25,6 +25,10 @@ w-80 {
   max-width: 80rem;
 }
 
+w-100 {
+  max-width: 100vw;
+}
+
 .brdr-0 {
   border: 0rem;
 }
